# GridPilot

./: .gitignore  README.md  pyproject.toml
config/: config.example.ini  esun_marketdata-2.0.0-cp37-abi3-macosx_11_0_arm64.whl  esun_trade-2.0.0-cp37-abi3-macosx_11_0_arm64.whl  grid_config_example.py  telegram.example.ini
docs/: PROJECT_STRUCTURE.md  README_GRID_BOT.md
scripts/: get_telegram_chat_id.py  run_api.py  run_grid_bot.py  run_telegram_bot.py
src/api/: __init__.py  dependencies.py  main.py
src/api/middleware/: __init__.py  auth.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routes/: __init__.py  health.py  portfolio.py  trigger_orders.py  users.py
src/brokers/: __init__.py  base.py  esun.py
src/core/: bot_manager.py  calculate_capital.py  grid_trading_bot.py  price_monitor.py  stock_info.py  trigger_order_manager.py  user_manager.py
src/models/: __init__.py  enums.py  order_log.py  trigger_order.py
src/storage/: __init__.py  base.py  json_storage.py
src/telegram/: telegram_bot.py  telegram_notifier.py
src/telegram/handlers/: __init__.py  portfolio_handlers.py  trigger_handlers.py
tests/: index.py  login.py  stock_price.py  test_telegram.py  trade.py
