[project]
name = "stock-grid-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.127.1",
    "filelock>=3.20.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.21",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
